[metadata]
name = seahorse
version = attr: seahorse.__version__
url = https://
author = Jimin Software
author_email = 
description = prototype development
long_description = 
license = System V 
classifiers = 
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
python_requires = >= 3.10
packages = find:
include_package_data = true
zip_safe = false
install_requires = 
    sqlparse >= 0.3.1

[options.entry_points]
console_scripts =
    seahorse-admin = seahorse.core.management:execute_from_command_line

[options.extras_require]
bycrypt=bycrypt

[flake8]
exclude = build,.git,.tox,./tests/.env
extend-ignore=E203
max-line-length=88%                               
